--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,3 +40,79 @@ body {
     font-weight: 100;
     overflow-x: auto; 
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  /* Buttons */
+  .calculator-buttons {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 10px;
+  }
+
+  button {
+    min-height: 50px;
+    font-size: 20px;
+    font-weight: 100;
+    border: none;
+    background: rgb(200, 200, 200);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    filter: brightness(110%);
+  }
+
+  button:active {
+    transform: translateY(1px);
+  }
+
+  button:focus {
+    outline: none;
+  }
+
+  /* +, -, *, / */
+  .operator {
+    background: gray;
+    color: white;
+    font-size: 30px;
+  }
+
+.clear {
+    background: rgb(255, 40, 40);
+    color: white;
+}
+
+.clear:hover {
+    filter: brightness(90%);
+  }
+
+  .equal-sign {
+    grid-column: -2;
+    grid-row: 2 / span 4;
+    background: rgb(13, 206, 87);
+  }
+
+  /* Media Query: Large Smartphone (Vertical) */
+@media screen and (max-width: 600px) {
+    .calculator {
+      width: 95%;
+    }
+  }
